fix description gallery images

--- a/galeria.html
+++ b/galeria.html
@@ -97,7 +97,7 @@
             <div class="gallery-overlay">
               <div class="overlay-content">
                 <h3>Guilherme Matheus</h3>
-                <p>Personal Trainer Profissional</p>
+                <p>Seu personal trainer dedicado à sua transformação</p>
                 <button class="view-btn" data-image="images/originais/image1.jpeg"
                   data-title="Guilherme Matheus - Personal Trainer">
                   <i class="fas fa-eye"></i>
@@ -120,8 +120,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Treino de Força</h3>
-                <p>Desenvolvimento muscular focado</p>
+                <h3>Desenvolvimento Muscular</h3>
+                <p>Técnica perfeita para máximos resultados</p>
                 <button class="view-btn" data-image="images/originais/image2.jpeg" data-title="Treino de Força">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -143,8 +143,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Treino de Pernas</h3>
-                <p>Cadeira extensora para quadríceps</p>
+                <h3>Fortalecimento</h3>
+                <p>Cada repetição te leva mais perto do seu objetivo</p>
                 <button class="view-btn" data-image="images/originais/image3.jpeg" data-title="Treino de Pernas">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -166,8 +166,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Hack Machine</h3>
-                <p>Agachamento para glúteos e pernas</p>
+                <h3>Força e Definição</h3>
+                <p>Construa o corpo dos seus sonhos</p>
                 <button class="view-btn" data-image="images/originais/image4.jpeg" data-title="Hack Machine">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -190,8 +190,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Smith Machine</h3>
-                <p>Agachamento com segurança</p>
+                <h3>Treino Seguro</h3>
+                <p>Evolução constante com técnica impecável</p>
                 <button class="view-btn" data-image="images/originais/image5.jpeg" data-title="Smith Machine">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -213,8 +213,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Personal Trainer</h3>
-                <p>Profissionalismo e dedicação</p>
+                <h3>Compromisso</h3>
+                <p>Dedicação total à sua jornada fitness</p>
                 <button class="view-btn" data-image="images/originais/image6.jpeg"
                   data-title="Personal Trainer Guilherme">
                   <i class="fas fa-eye"></i>
@@ -237,8 +237,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Autoavaliação</h3>
-                <p>Acompanhamento da evolução</p>
+                <h3>Evolução Real</h3>
+                <p>Acompanhe cada conquista no espelho</p>
                 <button class="view-btn" data-image="images/originais/image7.jpeg" data-title="Processo de Evolução">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -260,8 +260,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Ambiente de Treino</h3>
-                <p>Espaço profissional e motivador</p>
+                <h3>Ambiente Motivador</h3>
+                <p>Onde seus limites são superados diariamente</p>
                 <button class="view-btn" data-image="images/originais/image8.jpeg" data-title="Ambiente de Treino">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -283,8 +283,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Leg Press</h3>
-                <p>Fortalecimento de membros inferiores</p>
+                <h3>Potência Total</h3>
+                <p>Desenvolva pernas fortes e poderosas</p>
                 <button class="view-btn" data-image="images/originais/image9.jpeg" data-title="Leg Press">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -306,8 +306,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Leg Press Vertical</h3>
-                <p>Variação para máxima ativação</p>
+                <h3>Força Interior</h3>
+                <p>O poder vem de dentro, mas se constrói aqui</p>
                 <button class="view-btn" data-image="images/originais/image10.jpeg" data-title="Leg Press Vertical">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -329,8 +329,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Barra Fixa</h3>
-                <p>Desenvolvimento das costas</p>
+                <h3>Superação</h3>
+                <p>Cada subida é uma vitória conquistada</p>
                 <button class="view-btn" data-image="images/originais/image11.jpeg" data-title="Barra Fixa">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -352,8 +352,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Treino Específico</h3>
-                <p>Exercícios direcionados</p>
+                <h3>Técnica Perfeita</h3>
+                <p>A excelência está nos detalhes</p>
                 <button class="view-btn" data-image="images/originais/image12.jpeg" data-title="Treino Específico">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -375,8 +375,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Técnica Perfeita</h3>
-                <p>Foco na execução correta</p>
+                <h3>Precisão</h3>
+                <p>Movimentos certeiros para resultados garantidos</p>
                 <button class="view-btn" data-image="images/originais/image13.jpeg" data-title="Técnica Perfeita">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -398,8 +398,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Elevação Lateral</h3>
-                <p>Desenvolvimento de ombros</p>
+                <h3>Definição Total</h3>
+                <p>Esculpa ombros que impressionam</p>
                 <button class="view-btn" data-image="images/originais/image14.jpeg" data-title="Elevação Lateral">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -421,8 +421,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Retrato Profissional</h3>
-                <p>Guilherme Matheus Personal</p>
+                <h3>Profissionalismo</h3>
+                <p>A confiança que você precisa para começar</p>
                 <button class="view-btn" data-image="images/originais/image15.jpeg" data-title="Retrato Profissional">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -444,8 +444,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Hidratação</h3>
-                <p>Cuidado com o corpo</p>
+                <h3>Cuidado Integral</h3>
+                <p>Hidratação e recuperação fazem parte do sucesso</p>
                 <button class="view-btn" data-image="images/originais/image16.jpeg" data-title="Hidratação e Cuidado">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -467,8 +467,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Confiança</h3>
-                <p>Postura profissional</p>
+                <h3>Confiança Real</h3>
+                <p>A postura de quem sabe onde quer chegar</p>
                 <button class="view-btn" data-image="images/originais/image17.jpeg" data-title="Postura Profissional">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -490,8 +490,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Smith Machine</h3>
-                <p>Treino seguro e eficaz</p>
+                <h3>Método Comprovado</h3>
+                <p>Técnicas testadas, resultados garantidos</p>
                 <button class="view-btn" data-image="images/originais/image18.jpeg" data-title="Smith Machine Training">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -513,8 +513,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Treino Clássico</h3>
-                <p>Elevação lateral para ombros</p>
+                <h3>Determinação</h3>
+                <p>O foco que transforma sonhos em realidade</p>
                 <button class="view-btn" data-image="images/originais/image19.jpeg" data-title="Treino Clássico">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -536,8 +536,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Ambiente Completo</h3>
-                <p>Equipamentos de qualidade</p>
+                <h3>Estrutura Completa</h3>
+                <p>Tudo que você precisa para sua transformação</p>
                 <button class="view-btn" data-image="images/originais/image20.jpeg" data-title="Ambiente Completo">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -560,7 +560,7 @@
             <div class="gallery-overlay">
               <div class="overlay-content">
                 <h3>Lado Humano</h3>
-                <p>Proximidade e confiança</p>
+                <p>Seu parceiro nesta jornada de mudança</p>
                 <button class="view-btn" data-image="images/originais/image21.jpeg" data-title="Lado Humano">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -582,8 +582,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Postura Confiante</h3>
-                <p>Profissionalismo e simpatia</p>
+                <h3>Atitude Vencedora</h3>
+                <p>A energia que contagia e motiva</p>
                 <button class="view-btn" data-image="images/originais/image22.jpeg" data-title="Postura Confiante">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -605,8 +605,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Treino Abdominal</h3>
-                <p>Core forte e definido</p>
+                <h3>Core Forte</h3>
+                <p>A base sólida para todos os seus movimentos</p>
                 <button class="view-btn" data-image="images/originais/image23.jpeg" data-title="Treino Abdominal">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -629,7 +629,7 @@
             <div class="gallery-overlay">
               <div class="overlay-content">
                 <h3>Acompanhamento</h3>
-                <p>Avaliação de progresso</p>
+                <p>Cada dia é uma nova conquista</p>
                 <button class="view-btn" data-image="images/originais/image24.jpeg"
                   data-title="Acompanhamento de Progresso">
                   <i class="fas fa-eye"></i>
@@ -652,8 +652,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Treino Unilateral</h3>
-                <p>Trabalho específico por perna</p>
+                <h3>Trabalho Específico</h3>
+                <p>Exercícios direcionados para seu objetivo</p>
                 <button class="view-btn" data-image="images/originais/image25.jpeg" data-title="Treino Unilateral">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -676,7 +676,7 @@
             <div class="gallery-overlay">
               <div class="overlay-content">
                 <h3>Preparação</h3>
-                <p>Ajuste correto dos equipamentos</p>
+                <p>O sucesso começa antes do primeiro movimento</p>
                 <button class="view-btn" data-image="images/originais/image26.jpeg" data-title="Preparação do Treino">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -698,8 +698,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Remada Baixa</h3>
-                <p>Fortalecimento das costas</p>
+                <h3>Força das Costas</h3>
+                <p>Construa uma base sólida e imponente</p>
                 <button class="view-btn" data-image="images/originais/image27.jpeg" data-title="Remada Baixa">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -721,8 +721,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Posição Inicial</h3>
-                <p>Preparação para elevação lateral</p>
+                <h3>Momento Certo</h3>
+                <p>Cada posição inicial define o resultado final</p>
                 <button class="view-btn" data-image="images/originais/image28.jpeg" data-title="Posição Inicial">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -744,8 +744,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Autoconhecimento</h3>
-                <p>Momento de reflexão e foco</p>
+                <h3>Reflexão</h3>
+                <p>A mente focada é seu maior aliado</p>
                 <button class="view-btn" data-image="images/originais/image29.jpeg" data-title="Momento de Reflexão">
                   <i class="fas fa-eye"></i>
                 </button>
@@ -767,8 +767,8 @@
             </picture>
             <div class="gallery-overlay">
               <div class="overlay-content">
-                <h3>Determinação</h3>
-                <p>Foco na jornada de transformação</p>
+                <h3>Determinação Pura</h3>
+                <p>A força interior que move montanhas</p>
                 <button class="view-btn" data-image="images/originais/image30.jpeg" data-title="Determinação e Foco">
                   <i class="fas fa-eye"></i>
                 </button>
