--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,9 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
-          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          <a href="index.html" aria-label="Ir para o início">
+            <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          </a>
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
@@ -502,7 +504,7 @@
       <i class="fab fa-whatsapp"></i>
     </a>
   </div>
-  
+
   <script src="js/script.js"></script>
   <script src="js/contact.js"></script>
 </body>
