--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
-          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo"
+            onclick="window.location.href='index.html'" role="link" tabindex="0">
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
