--- a/servicos.html
+++ b/servicos.html
@@ -20,7 +20,9 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
-          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          <a href="index.html" aria-label="Ir para o início">
+            <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          </a>
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
