--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,9 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
-          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          <a href="index.html" aria-label="Ir para o início">
+            <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
+          </a>
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
@@ -106,7 +108,7 @@
       </div>
     </div>
   </section>
-  
+
 
   <!-- Methodology Section -->
   <section class="methodology">
