Delete products comentado se precisar voltar

--- a/produtos.html
+++ b/produtos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header
   <header class="header">
     <nav class="navbar">
       <div class="container">
@@ -44,26 +44,26 @@
         </div>
       </div>
     </nav>
-  </header>
+  </header> -->
 
-  <!-- Page Header -->
-  <section class="page-header">
+<!-- Page Header -->
+<!-- <section class="page-header">
     <div class="container">
       <h1>Produtos Exclusivos</h1>
       <p>Vista a camisa do time e mostre sua dedicação ao fitness</p>
     </div>
-  </section>
+  </section> -->
 
-  <!-- Products Section -->
-  <section class="products products-section">
+<!-- Products Section -->
+<!-- <section class="products products-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Loja Fitness</h2>
         <p class="section-subtitle">Produtos exclusivos para você que leva o treino a sério</p>
       </div>
 
-      <div class="products-grid">
-        <!-- Produto 1: Camiseta Dry Fit -->
+      <div class="products-grid"> -->
+<!-- Produto 1: Camiseta Dry Fit
         <div class="product-card">
           <div class="product-image">
             <img src="images/camiseta-dryfit.jpg" alt="Camiseta Dry Fit Personal Gui">
@@ -101,10 +101,10 @@
               Comprar Agora
             </a>
           </div>
-        </div>
+        </div> -->
 
-        <!-- Produto 2: Regata Cavada -->
-        <div class="product-card">
+<!-- Produto 2: Regata Cavada -->
+<!-- <div class="product-card">
           <div class="product-image">
             <img src="images/regata-cavada.jpg" alt="Regata Cavada Personal Gui">
           </div>
@@ -138,10 +138,10 @@
               Comprar Agora
             </a>
           </div>
-        </div>
+        </div> -->
 
-        <!-- Produto 3: Baby Look Feminina -->
-        <div class="product-card">
+<!-- Produto 3: Baby Look Feminina -->
+<!-- <div class="product-card">
           <div class="product-image">
             <img src="images/babylook-feminina.jpg" alt="Baby Look Feminina Personal Gui">
           </div>
@@ -176,10 +176,10 @@
               Comprar Agora
             </a>
           </div>
-        </div>
+        </div> -->
 
-        <!-- Produto 4: Garrafa Squeeze -->
-        <div class="product-card">
+<!-- Produto 4: Garrafa Squeeze -->
+<!-- <div class="product-card">
           <div class="product-image">
             <img src="images/garrafa-squeeze.jpg" alt="Garrafa Squeeze Personal Gui">
             <div class="product-badge new">Novidade</div>
@@ -205,10 +205,10 @@
               Comprar Agora
             </a>
           </div>
-        </div>
+        </div> -->
 
-        <!-- Produto 5: Luvas de Treino -->
-        <div class="product-card">
+<!-- Produto 5: Luvas de Treino -->
+<!-- <div class="product-card">
           <div class="product-image">
             <img src="images/luvas-treino.jpg" alt="Luvas de Treino Personal Gui">
           </div>
@@ -245,7 +245,7 @@
         </div>
 
         <!-- Produto 6: Toalha de Treino -->
-        <div class="product-card">
+<!-- <div class="product-card">
           <div class="product-image">
             <img src="images/toalha-treino.jpg" alt="Toalha de Treino Personal Gui">
           </div>
@@ -273,10 +273,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <!-- Kit Promotion -->
-  <section class="kit-promotion">
+<!-- Kit Promotion -->
+<!-- <section class="kit-promotion">
     <div class="container">
       <div class="kit-content">
         <div class="kit-info">
@@ -328,10 +328,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <!-- Shipping Info -->
-  <section class="shipping-info">
+<!-- Shipping Info -->
+<!-- <section class="shipping-info">
     <div class="container">
       <div class="shipping-grid">
         <div class="shipping-item">
@@ -375,10 +375,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <!-- Testimonials Products -->
-  <section class="testimonials-products">
+<!-- Testimonials Products -->
+<!-- <section class="testimonials-products">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">O que os clientes falam dos produtos</h2>
@@ -442,10 +442,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <!-- CTA Section -->
-  <section class="cta-section">
+<!-- CTA Section -->
+<!-- <section class="cta-section">
     <div class="container">
       <div class="cta-content">
         <h2>Pronto para mostrar sua dedicação?</h2>
@@ -459,10 +459,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <!-- Footer -->
-  <footer class="footer">
+<!-- Footer -->
+<!-- <footer class="footer">
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
@@ -509,18 +509,18 @@
         <p>Desenvolvido por <a href="https://gbconnect.digital" target="_blank">gbconnect.digital</a></p>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
-  <!-- WhatsApp Float Button -->
-  <div class="whatsapp-float">
+<!-- WhatsApp Float Button -->
+<!-- <div class="whatsapp-float">
     <a href="https://wa.me/5517982126171?text=Olá! Vim do site e gostaria de mais informações!" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
-  </div>
+  </div> -->
 
-  <!-- Scripts -->
-  <script src="js/script.js"></script>
+<!-- Scripts -->
+<!-- <script src="js/script.js"></script>
   <script src="products.js"></script>
 </body>
 
-</html>
+</html> -->
