--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><a href="#home" class="nav-link active">Início</a></li>
             <li><a href="sobre.html" class="nav-link">Sobre</a></li>
             <li><a href="servicos.html" class="nav-link">Serviços</a></li>
-            <li><a href="produtos.html" class="nav-link">Produtos</a></li>
+            <!-- <li><a href="produtos.html" class="nav-link">Produtos</a></li> -->
             <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
             <li><a href="galeria.html" class="nav-link">Galeria</a></li>
             <li><a href="dicas.html" class="nav-link">Dicas</a></li>
@@ -304,7 +304,7 @@
           <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servicos.html">Serviços</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
+            <!-- <li><a href="produtos.html">Produtos</a></li> -->
             <li><a href="depoimentos.html">Depoimentos</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a href="dicas.html">Dicas</a></li>
