header nav-link active aprimory

--- a/contato.html
+++ b/contato.html
@@ -20,21 +20,19 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
-          <a href="index.html" aria-label="Ir para o início">
-            <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
-          </a>
+          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo"
+            onclick="window.location.href='index.html'" role="link" tabindex="0">
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
-            <li><a href="index.html" class="nav-link">Início</a></li>
-            <li><a href="sobre.html" class="nav-link">Sobre</a></li>
-            <li><a href="servicos.html" class="nav-link">Serviços</a></li>
-            <!-- <li><a href="produtos.html" class="nav-link">Produtos</a></li> -->
-            <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
-            <li><a href="galeria.html" class="nav-link">Galeria</a></li>
-            <li><a href="dicas.html" class="nav-link">Dicas</a></li>
-            <li><a href="faq.html" class="nav-link">FAQ</a></li>
-            <li><a href="contato.html" class="nav-link active">Contato</a></li>
+            <li><a href="index.html" class="nav-link" data-page="home">Início</a></li>
+            <li><a href="sobre.html" class="nav-link" data-page="sobre">Sobre</a></li>
+            <li><a href="servicos.html" class="nav-link" data-page="servicos">Serviços</a></li>
+            <li><a href="depoimentos.html" class="nav-link" data-page="depoimentos">Depoimentos</a></li>
+            <li><a href="galeria.html" class="nav-link" data-page="galeria">Galeria</a></li>
+            <li><a href="dicas.html" class="nav-link" data-page="dicas">Dicas</a></li>
+            <li><a href="faq.html" class="nav-link" data-page="faq">FAQ</a></li>
+            <li><a href="contato.html" class="nav-link active" data-page="contato">Contato</a></li>
           </ul>
         </div>
         <div class="hamburger" id="hamburger">
@@ -45,6 +43,7 @@
       </div>
     </nav>
   </header>
+
 
 
   <!-- Contact Hero -->
