--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
-            <li><a href="#home" class="nav-link active">Início</a></li>
-            <li><a href="sobre.html" class="nav-link">Sobre</a></li>
-            <li><a href="servicos.html" class="nav-link">Serviços</a></li>
-            <!-- <li><a href="produtos.html" class="nav-link">Produtos</a></li> -->
-            <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
-            <li><a href="galeria.html" class="nav-link">Galeria</a></li>
-            <li><a href="dicas.html" class="nav-link">Dicas</a></li>
-            <li><a href="faq.html" class="nav-link">FAQ</a></li>
-            <li><a href="contato.html" class="nav-link">Contato</a></li>
+            <li><a href="index.html" class="nav-link active" data-page="home">Início</a></li>
+            <li><a href="sobre.html" class="nav-link" data-page="sobre">Sobre</a></li>
+            <li><a href="servicos.html" class="nav-link" data-page="servicos">Serviços</a></li>
+            <li><a href="depoimentos.html" class="nav-link" data-page="depoimentos">Depoimentos</a></li>
+            <li><a href="galeria.html" class="nav-link" data-page="galeria">Galeria</a></li>
+            <li><a href="dicas.html" class="nav-link" data-page="dicas">Dicas</a></li>
+            <li><a href="faq.html" class="nav-link" data-page="faq">FAQ</a></li>
+            <li><a href="contato.html" class="nav-link" data-page="contato">Contato</a></li>
           </ul>
         </div>
         <div class="hamburger" id="hamburger">
@@ -74,6 +73,7 @@
       </div>
     </nav>
   </header>
+
 
   <!-- Preload do poster para evitar CLS -->
   <link rel="preload" as="image" href="images/webp/video-poster.webp">
