--- a/contato.html
+++ b/contato.html
@@ -126,10 +126,10 @@
           <h3>E-mail</h3>
           <p>Para dúvidas e informações detalhadas</p>
           <div class="method-info">
-            <span class="method-value">guilherme@gmail.com</span>
+            <span class="method-value">guimateus001btos@gmail.com</span>
             <span class="method-response">Resposta em até 24h</span>
           </div>
-          <a href="mailto:guilherme@gmail.com" class="method-btn email-btn">
+          <a href="mailto:guimateus001btos@gmail.com" class="method-btn email-btn">
             <i class="fas fa-envelope"></i>
             Enviar E-mail
           </a>
