Fix: completa dicas modal js e arruma botoes tips

--- a/dicas.html
+++ b/dicas.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-dicas">
   <!-- Header -->
   <header class="header">
     <nav class="navbar">
