--- a/dicas.html
+++ b/dicas.html
@@ -116,7 +116,7 @@
       <div class="featured-tip" data-category="treino">
         <div class="featured-content">
           <div class="featured-text">
-            <span class="tip-category">💪 Treino em Destaque</span>
+            <span class="tip-category">Treino em Destaque</span>
             <h2>Como fazer o agachamento perfeito</h2>
             <p>O agachamento é um dos exercícios mais completos que existem. Aprenda a técnica correta para maximizar
               resultados e evitar lesões.</p>
