fix contact page

--- a/contato.html
+++ b/contato.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="hero-image">
-          <img src="images/guilherme-contato.jpg" alt="Guilherme Matheus Personal Trainer">
+          <img src="images/webp/image16-900.webp" alt="Guilherme Matheus Personal Trainer">
           <div class="status-badge">
             <div class="status-indicator"></div>
             <span>Online agora</span>
