Fix tips categories redirect for result

--- a/dicas.html
+++ b/dicas.html
@@ -386,10 +386,10 @@
 
       <!-- Load More -->
       <div class="load-more-container">
-        <button class="btn btn-outline load-more-tips">
+        <!-- <button class="btn btn-outline load-more-tips">
           <i class="fas fa-plus"></i>
           Carregar mais dicas
-        </button>
+        </button> -->
       </div>
     </div>
   </section>
